--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,16 +1,35 @@
 {
   "compilerOptions": {
-    "target": "es2020",
-    "lib": ["esnext", "dom"],
+    /* Basic Options */
+    "incremental": true,
+    "declaration": true,
+    "allowJs": true,
+    "noEmit": true,
     "module": "esnext",
-    "noImplicitAny": false,
-    "strictNullChecks": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "allowSyntheticDefaultImports": true,
-    "experimentalDecorators": true,
+    "target": "es2020",
     "moduleResolution": "node",
+
+    /* Strict Type-Checking Options */
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "strictBindCallApply": true,
+    "strictPropertyInitialization": false,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
     "resolveJsonModule": true,
-    "removeComments": false
+
+    /* Experimental Options */
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": false,
+
+    /* Module Resolution Options */
+    "baseUrl": ".", // This must be specified if "paths" is.
+    "paths": {
+      "*": ["packages/*", "apps/*"]
+    },
+
+    /* Additional Options */
+    "lib": ["esnext", "dom"] // 添加这一行
   }
 }
