--- a/packages/bodhi-adapter/package.json
+++ b/packages/bodhi-adapter/package.json
@@ -18,6 +18,7 @@
     "@babel/preset-typescript": "^7.23.3",
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.11",
+    "@types/node-fetch": "^2.6.10",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "jest": "^29.7.0",
