--- a/packages/bodhi-adapter/package.json
+++ b/packages/bodhi-adapter/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^16.3.1",
     "eventsource": "^2.0.2",
     "eventsource-parser": "^1.1.1",
+    "google-auth-library": "^9.4.1",
     "https-proxy-agent": "^7.0.2",
     "node-fetch": "^2.7.0",
     "stream": "^0.0.2"
