--- a/packages/bodhi-adapter/package.json
+++ b/packages/bodhi-adapter/package.json
@@ -17,13 +17,16 @@
     "google-auth-library": "^9.4.1",
     "https-proxy-agent": "^7.0.2",
     "node-fetch": "^2.7.0",
-    "stream": "^0.0.2"
+    "stream": "^0.0.2",
+    "tiktoken": "^1.0.11",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.23.3",
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.11",
     "@types/node-fetch": "^2.6.10",
+    "@types/uuid": "^9.0.7",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "jest": "^29.7.0",
