chore: update eslint

--- a/apps/bodhi-service/.env.sample
+++ b/apps/bodhi-service/.env.sample
@@ -2,13 +2,27 @@
 # 实例配置，仅定义运维实例及连接信息，不涉及服务策略。
 # ----------------------------------------------
 
+# MySQL
 MYSQL_HOST      = '127.0.0.1'
 MYSQL_PORT      = 3306
 MYSQL_USER      = ''
 MYSQL_PASSWORD  = ''
 MYSQL_DATABASE  = ''
 
+# Redis
 REDIS_HOST      = '127.0.0.1'
 REDIS_PORT      = 6379
 
+
+# OSS
+OSS_BUCKET        = ''
+OSS_REGION        = ''
+OSS_ACCESS_KEY    = ''
+OSS_ACCESS_SECRET = ''
+
+# Puppet
+PUPPET_ID         = 100
+
+# Proxy
+HTTP_PROXY       = 'http://192.168.2.8:7890'
 
