--- a/apps/bodhi-service/package.json
+++ b/apps/bodhi-service/package.json
@@ -40,6 +40,7 @@
     "bull": "^4.10.3",
     "crypto": "^1.0.1",
     "delay": "^6.0.0",
+    "dotenv": "^16.3.1",
     "hashids": "^2.3.0",
     "https-proxy-agent": "^7.0.2",
     "ioredis": "^5.3.2",
