chore: add users

--- a/apps/bodhi-service/.env.sample
+++ b/apps/bodhi-service/.env.sample
@@ -2,6 +2,10 @@
 # 实例配置，仅定义运维实例及连接信息，不涉及服务策略。
 # ----------------------------------------------
 
+
+# JWT
+JWT_SECRET        = ''
+
 # MySQL
 MYSQL_HOST      = '127.0.0.1'
 MYSQL_PORT      = 3306
