--- a/apps/bodhi-service/.env.sample
+++ b/apps/bodhi-service/.env.sample
@@ -2,6 +2,8 @@
 # 实例配置，仅定义运维实例及连接信息，不涉及服务策略。
 # ----------------------------------------------
 
+# Node
+NODE_PORT       = 3200
 
 # JWT
 JWT_SECRET        = ''
@@ -17,6 +19,11 @@ MYSQL_DATABASE  = ''
 REDIS_HOST      = '127.0.0.1'
 REDIS_PORT      = 6379
 
+# Smtp
+SMTP_HOST         = ''
+SMTP_PORT         = 465
+SMTP_USER         = ''
+SMTP_PASSWORD     = ''
 
 # OSS
 OSS_BUCKET        = ''
