--- a/packages/bodhi-adapter/package.json
+++ b/packages/bodhi-adapter/package.json
@@ -18,6 +18,7 @@
     "https-proxy-agent": "^7.0.2",
     "node-fetch": "^2.7.0",
     "stream": "^0.0.2",
+    "tencentcloud-sdk-nodejs": "^4.0.780",
     "tiktoken": "^1.0.11",
     "uuid": "^9.0.1"
   },
