--- a/apps/bodhi-service/package.json
+++ b/apps/bodhi-service/package.json
@@ -51,6 +51,7 @@
     "nest-winston": "^1.7.0",
     "node-fetch": "^2.7.0",
     "passport": "^0.6.0",
+    "passport-headerapikey": "^1.2.2",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "redis": "^4.6.4",
@@ -82,6 +83,8 @@
     "@types/uuid": "^9.0.7",
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "jest": "28.1.2",
     "rimraf": "3.0.2"
   }
