--- a/packages/bodhi-adapter/package.json
+++ b/packages/bodhi-adapter/package.json
@@ -1,15 +1,30 @@
 {
   "name": "@isnolan/bodhi-adapter",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsup",
+    "dev": "tsup --watch",
+    "pub": "tsup && npm publish --access public",
     "test": "jest"
   },
+  "type": "module",
+  "source": "./src/index.ts",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    }
+  },
+  "files": [
+    "build"
+  ],
   "dependencies": {
     "@aws-crypto/sha256-js": "^5.2.0",
     "@aws-sdk/protocol-http": "^3.374.0",
-    "@aws-sdk/signature-v4": "^3.374.0",
     "@smithy/signature-v4": "^2.0.19",
     "dotenv": "^16.3.1",
     "eventsource": "^2.0.2",
@@ -31,7 +46,8 @@
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.1"
+    "ts-jest": "^29.1.1",
+    "tsup": "^8.0.1"
   },
   "keywords": [],
   "author": "",
