--- a/packages/bodhi-adapter/tsconfig.json
+++ b/packages/bodhi-adapter/tsconfig.json
@@ -5,7 +5,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "tsBuildInfoFile": "./.tsbuildinfo"
   },
   "include": ["src", "test"]
 }
