--- a/packages/bodhi-adapter/package.json
+++ b/packages/bodhi-adapter/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@isnolan/bodhi-adapter",
-  "version": "0.0.1",
+  "version": "0.1.1",
   "description": "",
   "main": "index.js",
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
-    "pub": "tsup && npm publish --access public",
+    "version": "pnpm version patch",
+    "pub": "tsup && pnpm publish --access public",
     "test": "jest"
   },
   "type": "module",
