--- a/packages/bodhi-adapter/tsconfig.json
+++ b/packages/bodhi-adapter/tsconfig.json
@@ -6,7 +6,8 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "tsBuildInfoFile": "./.tsbuildinfo"
+    "tsBuildInfoFile": "./.tsbuildinfo",
+    "esModuleInterop": true
   },
   "include": ["src", "test"]
 }
