--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "packages/bodhi-unofficial"]
 	path = packages/bodhi-unofficial
 	url = git@github.com:isnolan/chatbot-puppet.git
+[submodule "packages/bodhi-puppet"]
+	path = packages/bodhi-puppet
+	url = git@github.com:isnolan/bodhi-puppet.git
