--- a/apps/bodhi-service/package.json
+++ b/apps/bodhi-service/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@isnolan/bodhi-adapter": "workspace:^",
+    "@isnolan/bodhi-puppet": "workspace:^",
     "@liaoliaots/nestjs-redis": "^9.0.5",
     "@nestjs-modules/mailer": "^1.10.3",
     "@nestjs/bull": "^0.6.3",
@@ -72,7 +73,6 @@
     "@nestjs/testing": "^9.0.11",
     "@types/ali-oss": "^6.16.11",
     "@types/express": "4.17.13",
-    "@types/ioredis": "^5.0.0",
     "@types/jest": "28.1.4",
     "@types/mime-types": "^2.1.4",
     "@types/multer": "^1.4.11",
