--- a/apps/bodhi-service/package.json
+++ b/apps/bodhi-service/package.json
@@ -33,6 +33,7 @@
     "@nestjs/platform-express": "^9.0.11",
     "@nestjs/platform-socket.io": "^9.3.9",
     "@nestjs/platform-ws": "^9.3.8",
+    "@nestjs/schedule": "^4.0.0",
     "@nestjs/serve-static": "^3.0.1",
     "@nestjs/swagger": "^7.1.13",
     "@nestjs/typeorm": "^9.0.1",
