build: test gitlab ci

--- a/apps/bodhi-service/.gitlab-ci.yml
+++ b/apps/bodhi-service/.gitlab-ci.yml
@@ -19,6 +19,7 @@ build:
   tags:
     - node.js
   script:
+    - cd apps/bodhi-service
     - export PUPPETEER_SKIP_DOWNLOAD=true
     - npm i pnpm -g
     - pnpm i
