build: test gitlab ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,13 @@
 stages:
-  - setup
+  - prepare
   - build
 
-setup:
-  stage: setup
+install_dependencies:
+  stage: prepare
   script:
-    - pnpm install
+    - pnpm install # 安装所有工作区的依赖项
+  only:
+    - master # 或者其他您想在其上执行此步骤的分支
 
 include:
   - local: 'apps/bodhi-service/.gitlab-ci.yml'
