--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,2 +1,20 @@
+stages:
+  - prepare
+  - build
+  - test
+
+cache:
+  paths:
+    - node_modules/
+    - .pnpm-store/
+
+install_dependencies:
+  stage: prepare
+  script:
+    - npm i pnpm -g
+    - pnpm install
+  only:
+    - main
+
 include:
   - local: 'apps/bodhi-service/.gitlab-ci.yml'
