--- a/apps/bodhi-service/.gitlab-ci.yml
+++ b/apps/bodhi-service/.gitlab-ci.yml
@@ -24,6 +24,7 @@ build:
   script:
     - export PUPPETEER_SKIP_DOWNLOAD=true
     # - pnpm config set store-dir .pnpm-store
+    - pnpm i -g pnpm
     - pnpm recursive install
     - cd apps/bodhi-service
     - pnpm link @isnolan/bodhi-adapter
