--- a/apps/bodhi-service/.gitlab-ci.yml
+++ b/apps/bodhi-service/.gitlab-ci.yml
@@ -27,7 +27,7 @@ build:
     # - pnpm setup
     # - export PNPM_HOME="$HOME/.pnpm"
     # - export PATH="$PNPM_HOME:$PATH"
-    - npm i -g pnpm
+    - pnpm -v
     - pnpm recursive install
     - cd apps/bodhi-service
     - pnpm link @isnolan/bodhi-adapter
