--- a/apps/bodhi-service/.gitlab-ci.yml
+++ b/apps/bodhi-service/.gitlab-ci.yml
@@ -21,6 +21,7 @@ build:
   before_script:
     - corepack enable
     - corepack prepare pnpm@latest-8 --activate
+    - npm install -g pnpm@latest-8
   script:
     - export PUPPETEER_SKIP_DOWNLOAD=true
     # - pnpm config set store-dir .pnpm-store
