--- a/apps/bodhi-service/.gitlab-ci.yml
+++ b/apps/bodhi-service/.gitlab-ci.yml
@@ -30,7 +30,7 @@ build:
     - pnpm i
     - pnpm recursive install
     - cd apps/bodhi-service
-    # - pnpm link @isnolan/bodhi-adapter
+    - pnpm link @isnolan/bodhi-adapter
     - pnpm list @isnolan/bodhi-adapter
     - pnpm run build
   artifacts:
