build: test gitlab ci

--- a/apps/bodhi-service/tsconfig.json
+++ b/apps/bodhi-service/tsconfig.json
@@ -20,7 +20,8 @@
     "noFallthroughCasesInSwitch": false,
     "paths": {
       "@/*": ["./src/*"],
-      "@modules": ["./src/modules/*"]
+      "@modules": ["./src/modules/*"],
+      "@isnolan/bodhi-adapter": ["../packages/bodhi-adapter/src/*"]
     }
   },
   "include": ["src/**/*.ts", "typings.d.ts"],
