--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ install_dependencies:
     - node.js
   script:
     - npm i pnpm -g
-    - pnpm install
+    - pnpm i
     - pnpm recursive install
   only:
     - main
