build: test gitlab ci

--- a/apps/bodhi-service/.gitlab-ci.yml
+++ b/apps/bodhi-service/.gitlab-ci.yml
@@ -42,6 +42,7 @@ deploy:
     REGISTRY_PATH: $CI_REGISTRY_IMAGE:$CI_PIPELINE_ID
   script:
     - echo "$REGISTRY_PWD" | docker login --username $REGISTRY_USER $CI_REGISTRY --password-stdin
+    - cd apps/bodhi-service
     - docker buildx create --use default
     - docker buildx build --platform linux/amd64,linux/arm64 --push -t $REGISTRY_PATH .
     - docker logout
