--- a/apps/bodhi-service/Dockerfile
+++ b/apps/bodhi-service/Dockerfile
@@ -33,8 +33,9 @@ COPY startup.sh ./
 ENV NODE_ENV=production
 ENV PUPPETEER_EXECUTABLE_PATH=/usr/lib/chromium/chrome
 ENV NODE_TLS_REJECT_UNAUTHORIZED=0
-# RUN pnpm install --ignore-scripts
 
+RUN npm install -g pnpm
+RUN pnpm install --ignore-scripts
 RUN chmod a+x ./startup.sh
 
 EXPOSE 3000
