fix: fixed bug for streaming

--- a/apps/bodhi-service/package.json
+++ b/apps/bodhi-service/package.json
@@ -41,6 +41,9 @@
     "@socket.io/redis-adapter": "^8.1.0",
     "ali-oss": "^6.18.0",
     "bull": "^4.10.3",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.13.2",
+    "compression": "^1.7.4",
     "dotenv": "^16.3.1",
     "hashids": "^2.3.0",
     "https-proxy-agent": "^7.0.2",
@@ -57,14 +60,12 @@
     "redis": "^4.6.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
-    "class-validator": "0.13.2",
     "socket.io": "^4.6.0",
     "tiktoken": "^1.0.10",
     "typeorm": "^0.3.12",
     "uuid": "^9.0.1",
     "validator": "^13.11.0",
     "winston": "^3.8.1",
-    "class-transformer": "0.5.1",
     "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
