--- a/packages/bodhi-adapter/package.json
+++ b/packages/bodhi-adapter/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@isnolan/bodhi-adapter",
-  "version": "0.2.1",
-  "description": "",
+  "version": "0.2.2",
+  "description": "llms adapter api for bodhi",
   "main": "index.js",
   "scripts": {
     "build": "tsup",
