--- a/apps/bodhi-service/Dockerfile
+++ b/apps/bodhi-service/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:lts-alpine
 
 # Essentials
-# RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
-RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.cloud.tencent.com/g' /etc/apk/repositories
+RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
+# RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.cloud.tencent.com/g' /etc/apk/repositories
 RUN apk update && apk upgrade
 
 RUN apk add -U tzdata
