--- a/apps/bodhi-service/package.json
+++ b/apps/bodhi-service/package.json
@@ -48,6 +48,7 @@
     "hashids": "^2.3.0",
     "https-proxy-agent": "^7.0.2",
     "ioredis": "^5.3.2",
+    "mammoth": "^1.7.1",
     "mime-types": "^2.1.35",
     "moment-timezone": "^0.5.43",
     "mysql2": "^3.1.2",
