--- a/.github/workflows/service.yml
+++ b/.github/workflows/service.yml
@@ -30,6 +30,7 @@ jobs:
           npm i pnpm -g
           pnpm -v
           pnpm config set store-dir .pnpm-store
+          pnpm i
           cd apps/bodhi-service
           pnpm i
 
@@ -41,7 +42,7 @@ jobs:
         uses: actions/upload-artifact@v4.3.0
         with:
           name: web-dist
-          path: apps/web/dist
+          path: apps/bodhi-service/dist
 
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -56,8 +57,8 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: apps/web
-          file: apps/web/Dockerfile
+          context: apps/bodhi-service
+          file: apps/bodhi-service/Dockerfile
           push: true
           platforms: linux/amd64,linux/arm64
           tags: ghcr.io/draftai/chatonce:${{ github.run_id }}
