build: update github actions

--- a/.github/workflows/service.yml
+++ b/.github/workflows/service.yml
@@ -36,6 +36,7 @@ jobs:
 
       - name: Build
         run: |
+          cd apps/bodhi-service
           pnpm run build
 
       - name: Upload artifact
