--- a/packages/bodhi-adapter/package.json
+++ b/packages/bodhi-adapter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@isnolan/bodhi-adapter",
-  "version": "0.5.2",
+  "version": "0.5.3",
   "description": "llms adapter api for bodhi",
   "main": "index.js",
   "scripts": {
@@ -15,9 +15,9 @@
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.js",
+      "import": "./dist/index.cjs",
       "types": "./dist/index.d.ts",
-      "default": "./dist/index.js"
+      "default": "./dist/index.cjs"
     }
   },
   "files": [
