chore: update github actions

--- a/.github/workflows/clean.yml
+++ b/.github/workflows/clean.yml
@@ -25,3 +25,6 @@ jobs:
           package-name: 'bodhi'
           package-type: 'container'
           min-versions-to-keep: 3
+
+      - name: Docker logout
+        run: docker logout
