chore: update pdf

--- a/apps/bodhi-service/package.json
+++ b/apps/bodhi-service/package.json
@@ -58,10 +58,12 @@
     "passport-headerapikey": "^1.2.2",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pdf2pic": "^3.1.1",
     "redis": "^4.6.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "socket.io": "^4.6.0",
+    "tesseract.js": "^5.0.5",
     "tiktoken": "^1.0.10",
     "typeorm": "^0.3.12",
     "uuid": "^9.0.1",
