--- a/packages/bodhi-adapter/package.json
+++ b/packages/bodhi-adapter/package.json
@@ -47,8 +47,9 @@
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
-    "tsup": "^8.0.1"
+    "ts-jest": "^29.1.2",
+    "tsup": "^8.0.1",
+    "typescript": "^5.2.2"
   },
   "keywords": [],
   "author": "",
