--- a/apps/bodhi-service/package.json
+++ b/apps/bodhi-service/package.json
@@ -88,6 +88,7 @@
     "@types/passport-jwt": "^3.0.13",
     "@types/passport-local": "^1.0.38",
     "@types/uuid": "^9.0.7",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "jest": "28.1.2",
