--- a/package.json
+++ b/package.json
@@ -43,15 +43,18 @@
     "@changesets/cli": "^2.22.0",
     "@commitlint/cli": "^17.0.0",
     "@commitlint/config-conventional": "^17.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.24.0",
-    "@typescript-eslint/parser": "^5.24.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.15.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-unused-imports": "^3.2.0",
     "father-build": "^1.22.1",
     "husky": "^8.0.1",
     "lint-staged": "^12.4.1",
+    "prettier": "^3.2.5",
     "rimraf": "^3.0.2",
-    "typescript": "^5.2.2"
+    "typescript": "~5.1.6"
   }
 }
