--- a/packages/bodhi-adapter/package.json
+++ b/packages/bodhi-adapter/package.json
@@ -49,7 +49,7 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
     "tsup": "^8.0.1",
-    "typescript": "^5.2.2"
+    "typescript": "~5.1.6"
   },
   "keywords": [],
   "author": "",
