--- a/.github/workflows/service.yml
+++ b/.github/workflows/service.yml
@@ -18,7 +18,8 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4.0.2
         with:
-          node-version: '21'
+          node-version: '20'
+          cache: 'npm'
 
       - name: Cache Node.js modules
         uses: actions/cache@v4
