--- a/.github/workflows/service.yml
+++ b/.github/workflows/service.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/setup-node@v4.0.2
         with:
           node-version: '20'
-          cache: 'npm'
+          cache: 'pnpm'
 
       - name: Cache Node.js modules
         uses: actions/cache@v4
