--- a/apps/bodhi-service/package.json
+++ b/apps/bodhi-service/package.json
@@ -40,6 +40,7 @@
     "@nestjs/typeorm": "^9.0.1",
     "@nestjs/websockets": "^9.3.8",
     "@socket.io/redis-adapter": "^8.1.0",
+    "bignumber.js": "^9.1.2",
     "bull": "^4.10.3",
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
@@ -78,6 +79,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.1",
     "@nestjs/testing": "^9.0.11",
+    "@types/bignumber.js": "^5.0.0",
     "@types/express": "4.17.13",
     "@types/jest": "28.1.4",
     "@types/mime-types": "^2.1.4",
